log/build_2024-06-20_09-57-05/calibrate_gyro/stderr.log
cc1: warning: command-line option '-fpermissive' is valid for C++/ObjC++ but not for C
cc1: warning: command-line option '-fpermissive' is valid for C++/ObjC++ but not for C
cc1: warning: command-line option '-fpermissive' is valid for C++/ObjC++ but not for C
cc1: warning: command-line option '-fpermissive' is valid for C++/ObjC++ but not for C
cc1: warning: command-line option '-fpermissive' is valid for C++/ObjC++ but not for C
cc1: warning: command-line option '-fpermissive' is valid for C++/ObjC++ but not for C
In file included from /home/ubuntu/ros2_ws/src/calibrate_gyro/src/calibrate_gyro.cpp:24:
/home/ubuntu/ros2_ws/src/calibrate_gyro/include/calibrate_gyro/calibrate_gyro_private.h:68:2: error: #error Code was generated for compiler with different sized ulong/long. Consider adjusting Test hardware word size settings on the Hardware Implementation pane to match your compiler word sizes as defined in limits.h of the compiler. Alternatively, you can select the Test hardware is the same as production hardware option and select the Enable portable word sizes option on the Code Generation > Verification pane for ERT based targets, which will disable the preprocessor word size checks.
   68 | #error Code was generated for compiler with different sized ulong/long. \
      |  ^~~~~
In file included from /home/ubuntu/ros2_ws/src/calibrate_gyro/src/ros2nodeinterface.cpp:31:
/home/ubuntu/ros2_ws/src/calibrate_gyro/include/calibrate_gyro/ros2nodeinterface.h: In constructor 'ros2::matlab::NodeInterface::NodeInterface()':
/home/ubuntu/ros2_ws/src/calibrate_gyro/include/calibrate_gyro/ros2nodeinterface.h:76:38: warning: 'ros2::matlab::NodeInterface::mExtModeThread' will be initialized after [-Wreorder]
   76 |         std::shared_ptr<std::thread> mExtModeThread;
      |                                      ^~~~~~~~~~~~~~
/home/ubuntu/ros2_ws/src/calibrate_gyro/include/calibrate_gyro/ros2nodeinterface.h:73:15: warning:   'ros2::matlab::Semaphore ros2::matlab::NodeInterface::mStopSem' [-Wreorder]
   73 |     Semaphore mStopSem;
      |               ^~~~~~~~
/home/ubuntu/ros2_ws/src/calibrate_gyro/src/ros2nodeinterface.cpp:43:1: warning:   when initialized here [-Wreorder]
   43 | NodeInterface::NodeInterface()
      | ^~~~~~~~~~~~~
/home/ubuntu/ros2_ws/src/calibrate_gyro/src/ros2nodeinterface.cpp: In member function 'void ros2::matlab::NodeInterface::initialize(int, char* const*)':
/home/ubuntu/ros2_ws/src/calibrate_gyro/src/ros2nodeinterface.cpp:67:47: warning: ISO C++ forbids converting a string constant to 'char*' [-Wwrite-strings]
   67 |                         char* extmodeArg[] = {"-port","17725","-blocking","1","-verbose","0"};
      |                                               ^~~~~~~
/home/ubuntu/ros2_ws/src/calibrate_gyro/src/ros2nodeinterface.cpp:67:55: warning: ISO C++ forbids converting a string constant to 'char*' [-Wwrite-strings]
   67 |                         char* extmodeArg[] = {"-port","17725","-blocking","1","-verbose","0"};
      |                                                       ^~~~~~~
/home/ubuntu/ros2_ws/src/calibrate_gyro/src/ros2nodeinterface.cpp:67:63: warning: ISO C++ forbids converting a string constant to 'char*' [-Wwrite-strings]
   67 |                         char* extmodeArg[] = {"-port","17725","-blocking","1","-verbose","0"};
      |                                                               ^~~~~~~~~~~
/home/ubuntu/ros2_ws/src/calibrate_gyro/src/ros2nodeinterface.cpp:67:75: warning: ISO C++ forbids converting a string constant to 'char*' [-Wwrite-strings]
   67 |                         char* extmodeArg[] = {"-port","17725","-blocking","1","-verbose","0"};
      |                                                                           ^~~
/home/ubuntu/ros2_ws/src/calibrate_gyro/src/ros2nodeinterface.cpp:67:79: warning: ISO C++ forbids converting a string constant to 'char*' [-Wwrite-strings]
   67 |                         char* extmodeArg[] = {"-port","17725","-blocking","1","-verbose","0"};
      |                                                                               ^~~~~~~~~~
/home/ubuntu/ros2_ws/src/calibrate_gyro/src/ros2nodeinterface.cpp:67:90: warning: ISO C++ forbids converting a string constant to 'char*' [-Wwrite-strings]
   67 |                         char* extmodeArg[] = {"-port","17725","-blocking","1","-verbose","0"};
      |                                                                                          ^~~
gmake[2]: *** [CMakeFiles/calibrate_gyro.dir/build.make:163: CMakeFiles/calibrate_gyro.dir/src/calibrate_gyro.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:140: CMakeFiles/calibrate_gyro.dir/all] Error 2
gmake: *** [Makefile:149: all] Error 2
